# appdomaintest

./: .gitignore  CMakeLists.txt  MIT-LICENSE.txt  README.md
Client/: CMakeLists.txt  main.cpp
Interface/: CMakeLists.txt  Interface.cpp  Interface.cs  Interface.h
NormalPlugin/: CMakeLists.txt  NormalPlugin.cs
Plugins/BadPlugin/: BadPlugin.cs  CMakeLists.txt
Plugins/NormalPlugin/: CMakeLists.txt  NormalPlugin.cs
Plugins/SlowPlugin/: CMakeLists.txt  SlowPlugin.cs
Sandbox/: CMakeLists.txt  Sandbox.cs  Sponsor.cs
Server/: CMakeLists.txt  main.cpp
Template/: AssemblyInfo.cpp.template  AssemblyInfo.cs.template
