CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(Example LANGUAGES CSharp CXX)

SET(CMAKE_DOTNET_TARGET_FRAMEWORK_VERSION "v4.7.2")
SET(CMAKE_CSharp_FLAGS "/langversion:6")

set(CMAKE_GENERATOR_PLATFORM x64)
SET(CMAKE_CSharp_FLAGS "/platform:x64")

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Bin/")

set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)

ADD_SUBDIRECTORY(Interface)
ADD_SUBDIRECTORY(Sandbox)
ADD_SUBDIRECTORY(Client)
ADD_SUBDIRECTORY(Server)

ADD_SUBDIRECTORY(Plugins/NormalPlugin)
set_property(TARGET NormalPlugin PROPERTY FOLDER "Plugins")
ADD_SUBDIRECTORY(Plugins/BadPlugin)
set_property(TARGET BadPlugin PROPERTY FOLDER "Plugins")
ADD_SUBDIRECTORY(Plugins/SlowPlugin)
set_property(TARGET SlowPlugin PROPERTY FOLDER "Plugins")